kubernetes/apps/media/sabnzbd/app/route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
spec:
  parentRefs:
    - name: shared
      namespace: gateway
      sectionName: https
  hostnames:
    - nzb.blackcats.cc
  rules:
    - backendRefs:
        - name: sabnzbd
          port: 8080
